--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -10267,7 +10267,7 @@ header.masthead {
     padding-bottom: 6rem;
     text-align: center;
     color: #fff;
-    background-image: url("assets/img/capa.png");
+    background-image: url("https://carlos-alexandre-leutz.github.io/Blog-Codigo-Front-End/assets/img/capa.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
