--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -10267,7 +10267,7 @@ header.masthead {
     padding-bottom: 6rem;
     text-align: center;
     color: #fff;
-    background-image: url("https://blog-geek-midia.s3.amazonaws.com/wp-content/uploads/2019/01/11141142/mercado-front-end-origem-1.png");
+    background-image: url("~/assets/img/capa.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
